# waltd3-agent

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: chat.py  init_db.py  mcp_server.py
src/my_mcp_agent/: agent.py  config.py  db.py  embeddings.py  extractor.py  mcp_server.py  memory.py  models.py  profile.py  schema.sql  web.py
src/my_mcp_agent_plus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
static/: style.css
templates/: index.html  memories.html
