[project]
name = "my-mcp-agent-plus"
version = "0.1.0"
description = "Personal memory agent with automatic extraction, semantic search, web UI, and local MCP server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "openai>=1.0.0",
  "python-dotenv>=1.0.0",
  "pydantic>=2.0.0",
  "fastapi>=0.110.0",
  "uvicorn>=0.29.0",
  "jinja2>=3.1.0",
  "python-multipart>=0.0.9",
  "mcp>=1.0.0",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "ruff>=0.15.10",
]
